# Memoir

./: .env.example  README.md  config.yaml  install.sh  pyproject.toml
.claude/: settings.local.json
data/users/demo-user/: config.json
data/users/demo-user/files/: 7966d780-5c8b-4479-9025-6471b2fc23f1.txt
data/users/demo-user/index/: search.db
data/users/demo-user/logs/: operations.jsonl
data/users/demo-user/long_term/: AboutZhangSan_c8921ba1.md  Firstchat_7544a404.md
data/users/demo-user/meta/: 0a1d634a-ea9c-499d-be99-c447946171b1.json  12ce5f92-3b5c-460f-a2b9-5e622588f23a.json  7966d780-5c8b-4479-9025-6471b2fc23f1.json
data/users/demo-user/short_term/: 2026-03-17.jsonl
data/users/test-user/: config.json
data/users/test-user-2/index/: search.db
data/users/test-user-2/logs/: operations.jsonl
data/users/test-user-2/long_term/: WorkInfo_7424c984.md
data/users/test-user/files/: 36c19c15-acaf-4516-a39f-5a26f097b34e.txt  (+2 more)
src/: __init__.py  main.py
src/api/: __init__.py  dependencies.py
src/api/routes/: chat.py  config.py  files.py  import.py  logs.py  memories.py
src/core/: __init__.py  config.py  dialogue_engine.py  llm_client.py  memory_index.py  memory_retriever.py  memory_store.py  user_config.py
src/importers/: __init__.py  base.py  extractor.py  html_importer.py  json_importer.py  markdown_importer.py  pdf_importer.py  txt_importer.py  word_importer.py
src/utils/: __init__.py  file_extractor.py  logger.py
static/: index.html
tests/: __init__.py  test_api.py  test_config.py  test_memory_store.py
(+7 files in other folders)
